# MRS_W_V2

./: .gitignore  CMakeLists.txt  firmwareupdate.cpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
screens/: firmwareupdate.cpp  firmwareupdate.h  settings.cpp  settings.h
